--- a/utlikotlin/build.gradle
+++ b/utlikotlin/build.gradle
@@ -52,4 +52,6 @@ dependencies {
     implementation "com.squareup.moshi:moshi-kotlin:1.11.0"
 
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+
+    implementation 'com.journeyapps:zxing-android-embedded:4.1.0'
 }
