--- a/utlikotlin/build.gradle
+++ b/utlikotlin/build.gradle
@@ -56,4 +56,6 @@ dependencies {
     implementation 'com.journeyapps:zxing-android-embedded:4.1.0'
 
     implementation 'com.google.android.gms:play-services-location:18.0.0'
+
+    implementation 'com.google.android.exoplayer:exoplayer:2.13.3'
 }
