--- a/utlikotlin/build.gradle
+++ b/utlikotlin/build.gradle
@@ -55,6 +55,7 @@ dependencies {
 
     implementation 'com.journeyapps:zxing-android-embedded:4.1.0'
 
+    implementation 'com.google.android.gms:play-services-maps:17.0.1'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
 
     implementation 'com.google.android.exoplayer:exoplayer:2.14.1'
