--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,11 @@
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+        jcenter() // Warning: this repository is going to shut down soon
+    }
+}
 include ':utlikotlin'
 include ':app'
-include ':Library'
 rootProject.name = "Util Kotlin"
