--- a/utlikotlin/build.gradle
+++ b/utlikotlin/build.gradle
@@ -57,6 +57,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:19.0.1'
 
     implementation 'com.google.android.exoplayer:exoplayer:2.17.1'
+
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
 }
 
 afterEvaluate {
